Line Awesome CDN Added instead Local CSS File

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 
-    <!-- LINE AWESOME -->
-    <link rel="stylesheet" href="line-awesome.min.css">
+    <!-- LINE AWESOME CDN -->
+    <link rel="stylesheet"
+        href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 
     <!-- Main CSS Stylesheet -->
     <link rel="stylesheet" href="style.css">
